[package]
name = "cesiumdb"
authors = ["Sienna Satterwhite <sienna@linux.com>", "CesiumDB Authors"]
version = "0.0.1"
edition = "2021"

[features]
default_features = []
secure = ["mimalloc/secure"]

[dependencies]
bloom2 = { version = "0.4.3", features = ["serde"] }
bytes = "1.7.2"
crc32fast = "1.4.2"
crossbeam-channel = "0.5.13"
crossbeam-skiplist = "0.1.3"
gxhash = "3.4.1"
libc = "0.2"
memmap2 = "0.9.5"
mimalloc = "0.1.43"
parking_lot = "0.12.3"
rand = "0.8.5"
thiserror = "1.0.64"
tracing = "0.1.40"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hlc"
harness = false

[[bench]]
name = "db"
harness = false

[[bench]]
name = "merge"
harness = false

[build-dependencies]
cbindgen = "0.27.0"
