[package]
name = "cesiumdb"
authors = ["Sienna Satterwhite <sienna@linux.com>", "CesiumDB Authors"]
version = "0.0.1"
edition = "2021"

[features]
default_features = []
# you have to enable benchmarks to run them. this is due to criterion only being able to access the public API, but i
# don't want to expose most of the API to the public.
benchmarks = []

[dependencies]
bloom2 = { version = "0.5.0", features = ["serde"] } # no support yet, might just permanently vendor
bytes = "1.7.2"# no_std support
crc32fast = "1.4.2" # no_std support
crossbeam-channel = "0.5.13" # no_std might be supported soon?
crossbeam-queue = "0.3.11"# no_std support, i think
crossbeam-skiplist = "0.1.3" # no_std support, i think
getset = "0.1.3" # this is compile time only, shouldn't be a problem
gxhash = "3.4.1"# no_std support
memmap2 = "0.9.5" # there would need to be a functional replacement of the filesystem library, but it might be possible
mimalloc = { version = "0.1.43" } # maybe there's no_std support? big question mark
parking_lot = "0.12.3" # we would need to find a replacement for this, maybe lock_api?
rand = "0.8.5" # has no_std support
thiserror = "1.0" # it looks like there is no_std support
tracing = "0.1.40" # there is no_std support

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["full"] }
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3"
tempfile = "3.14.0"
proptest = "1.0"

[[bench]]
name = "hlc"
harness = false

[[bench]]
name = "db"
harness = false

[[bench]]
name = "merge"
harness = false

[[bench]]
name = "fs"
harness = false

[build-dependencies]
cbindgen = "0.27.0"
